@@ -31,15 +31,41 @@
 #include "plugins/artnet/ArtNetPlugin.h"
 #endif
 
+#ifdef USE_DUMMY
 #include "plugins/dummy/DummyPlugin.h"
+#endif
+
+#ifdef USE_E131
 #include "plugins/e131/E131Plugin.h"
+#endif
+
+#ifdef USE_ESPNET
 #include "plugins/espnet/EspNetPlugin.h"
+#endif
+
+#ifdef USE_OPENDMX
 #include "plugins/opendmx/OpenDmxPlugin.h"
+#endif
+
+#ifdef USE_PATHPORT
 #include "plugins/pathport/PathportPlugin.h"
+#endif
+
+#ifdef USE_SANDNET
 #include "plugins/sandnet/SandNetPlugin.h"
+#endif
+
+#ifdef USE_SHOWNET
 #include "plugins/shownet/ShowNetPlugin.h"
+#endif
+
+#ifdef USE_STAGEPROFI
 #include "plugins/stageprofi/StageProfiPlugin.h"
+#endif
+
+#ifdef USE_USBPRO
 #include "plugins/usbpro/UsbSerialPlugin.h"
+#endif
 
 #ifdef HAVE_LIBUSB
 #include "plugins/usbdmx/UsbDmxPlugin.h"
@@ -89,28 +115,58 @@ void DynamicPluginLoader::PopulatePlugins() {
 #ifdef USE_ARTNET
   m_plugins.push_back(new ola::plugin::artnet::ArtNetPlugin(m_plugin_adaptor));
 #endif
+
+#ifdef USE_DUMMY
   m_plugins.push_back(new ola::plugin::dummy::DummyPlugin(m_plugin_adaptor));
+#endif
+
+#ifdef USE_E131
   m_plugins.push_back(new ola::plugin::e131::E131Plugin(m_plugin_adaptor));
+#endif
+
+#ifdef USE_ESPNET
   m_plugins.push_back(new ola::plugin::espnet::EspNetPlugin(m_plugin_adaptor));
+#endif
+
+#ifdef USE_OPENDMX
   m_plugins.push_back(
       new ola::plugin::opendmx::OpenDmxPlugin(m_plugin_adaptor));
+#endif
+
 #ifdef HAVE_LIBLO
   m_plugins.push_back(
       new ola::plugin::osc::OSCPlugin(m_plugin_adaptor));
 #endif
+
+#ifdef USE_SANDNET
   m_plugins.push_back(
       new ola::plugin::sandnet::SandNetPlugin(m_plugin_adaptor));
+#endif
+
+#ifdef USE_SHOWNET
   m_plugins.push_back(
       new ola::plugin::shownet::ShowNetPlugin(m_plugin_adaptor));
+#endif
+
+#ifdef USE_STAGEPROFI
   m_plugins.push_back(
       new ola::plugin::stageprofi::StageProfiPlugin(m_plugin_adaptor));
+#endif
+
+#ifdef USE_USBPRO
   m_plugins.push_back(
       new ola::plugin::usbpro::UsbSerialPlugin(m_plugin_adaptor));
+#endif
+
 #ifdef HAVE_LIBUSB
   m_plugins.push_back(new ola::plugin::usbdmx::UsbDmxPlugin(m_plugin_adaptor));
 #endif
+
+#ifdef USE_PATHPORT
   m_plugins.push_back(
       new ola::plugin::pathport::PathportPlugin(m_plugin_adaptor));
+#endif
+
 #ifdef HAVE_LIBFTDI
   m_plugins.push_back(
       new ola::plugin::ftdidmx::FtdiDmxPlugin(m_plugin_adaptor));
