@@ -4,6 +4,7 @@ libdir = $(plugindir)
 EXTRA_DIST = EspNetPlugin.h EspNetDevice.h EspNetPort.h EspNetPackets.h \
              EspNetNode.h EspNetPluginCommon.h RunLengthDecoder.h
 
+if USE_ESPNET
 lib_LTLIBRARIES = libolaespnet.la
 libolaespnet_la_SOURCES = EspNetPlugin.cpp EspNetDevice.cpp EspNetPort.cpp \
                           EspNetNode.cpp RunLengthDecoder.cpp
@@ -20,3 +21,4 @@ EspNetTester_SOURCES = EspNetTester.cpp \
 EspNetTester_CXXFLAGS = $(COMMON_CXXFLAGS) $(CPPUNIT_CFLAGS)
 EspNetTester_LDADD = $(CPPUNIT_LIBS) \
                      ../../common/libolacommon.la
+endif
